# NDK

./: # NDK  README.md
NDKUser/: settings.gradle
NDKUser/app/: build.gradle
NDKUser/app/src/androidTest/java/cn/george/ndkuser/: ExampleInstrumentedTest.kt
NDKUser/app/src/main/: AndroidManifest.xml
NDKUser/app/src/main/java/cn/george/nativecreator/: MainActivity.java  MainActivity.kt
NDKUser/app/src/main/java/cn/george/ndkuser/: MainActivity.kt
NDKUser/app/src/main/res/values/: strings.xml
NDKUser/gradle/wrapper/: gradle-wrapper.properties
NativeCreator/: settings.gradle
NativeCreator/app/: build.gradle
NativeCreator/app/src/main/: AndroidManifest.xml
NativeCreator/app/src/main/cpp/: CMakeLists.txt  Facer.cpp  Facer.h  native-lib.cpp
NativeCreator/app/src/main/res/values/: strings.xml
NativeCreator/gradle/wrapper/: gradle-wrapper.properties
NativeDesigner/: settings.gradle
NativeDesigner/app/: build.gradle
NativeDesigner/app/src/main/: AndroidManifest.xml
NativeDesigner/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NativeDesigner/app/src/main/res/values/: strings.xml
NativeDesigner/gradle/wrapper/: gradle-wrapper.properties
NativeDesignerCreateSo/: settings.gradle
NativeDesignerCreateSo/app/: build.gradle
NativeDesignerCreateSo/app/src/main/: AndroidManifest.xml
NativeDesignerCreateSo/app/src/main/cpp/: CMakeLists.txt  three-lib.cpp
NativeDesignerCreateSo/app/src/main/res/values/: strings.xml
NativeDesignerCreateSo/gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
